# prometheus-mcp

./: .gitignore  README.md  config.json  mcp_to_openapi.sh  openapi.sh  pyproject.toml  requirements.txt
prometheus_mcp/: __init__.py  analyzer.py  config.py  loki_client.py  models.py  prom_client.py  server.py  utils.py
