[project]
name = "prometheus-mcp"
version = "0.1.0"
description = "Prometheus analysis MCP server using fastmcp"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "SongYibao" }]

dependencies = [
  "fastmcp",
  "httpx",
  "loguru>=0.7.3",
  "mysql-connector-python>=9.4.0",
  "pydantic",
]

[project.scripts]
prometheus-mcp = "prometheus_mcp.server:main"

[tool.ruff]
line-length = 100

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
