[project]
name = "prometheus-mcp"
version = "0.1.0"
description = "Prometheus analysis MCP server using fastmcp"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SongYibao" }]

dependencies = [
  "fastmcp",
  "httpx",
  "loguru>=0.7.3",
  "mcpo>=0.0.17",
  "pydantic",
]

[project.scripts]
prometheus-mcp = "prometheus_mcp.server:main"

[tool.ruff]
line-length = 100

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
#url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
